<resources>
    <!-- Chua sua -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3624577063056009/1471959306</string>
    <!-- Chua sua -->


    <string name="app_name">Schedule</string>
    <string name="title_activity_setting__alarm_activity">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="new_event">New Event</string>
    <string name="event_name">Event name</string>
    <string name="event_des">Describe</string>
    <string name="event_color">Color</string>
    <string name="sound_noti">Sound and notification</string>
    <string name="alarm">Alarm</string>
    <string name="before">Before</string>
    <string name="noti">Notification</string>
    <string name="phone_mode">Phone mode</string>
    <string name="normal">Normal</string>
    <string name="vibrate">Vibrate</string>
    <string name="silent">Silent</string>
    <string name="set_time">Time</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="one_table">You should only create one schedule for all your activities</string>
    <string name="table">Table</string>
    <string name="table_setting">Set number of rows and columns</string>
    <string name="sound_setting">Setting your alarm, notification sound</string>
    <string name="custom">Custom</string>
    <string name="custong_setting">Custom your table of schedule</string>
    <string name="info">Information</string>
    <string name="info_setting">Tips and information</string>
    <string name="save_setting">Save setting</string>
    <string name="to">" to "</string>
    <string name="your_event">Your events</string>
    <string name="empty">You have no events</string>


    <string name="empty_name">Name is empty</string>
    <string name="empty_color">Color is not selected</string>
    <string name="warning">Warning</string>
    <string name="without_saving">Do you want to leave without saving ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="swipe">SWIPE TO STOP ALARM</string>
    <string name="classic">Classic</string>
    <string name="corners">Corners</string>
    <string name="text_size">Text size</string>
    <string name="event_card">Table</string>
    <string name="bar">Date time bar</string>
    <string name="background_color">Background color</string>
    <string name="text_color">Text color</string>
    <string name="time_colums">Time</string>
    <string name="date_row">Date</string>
    <string name="Alarm_Sound">Alarm Sound</string>
    <string name="Vibration">Vibration</string>
    <string name="Notification_Sound">Notification Sound</string>
    <string name="tips">Tips</string>
    <string name="App_Informations">App Informations</string>
    <string name="tip1">You can add a widget by long click on the home screen and chose widget then chose this app widget</string>
    <string name="delete_timetable">Do you want to delete this timetable ?</string>
    <string name="cell_color">Cell color</string>
    <string name="crystal_clear">crystal-clear</string>
    <string name="Events">Events</string>
    <string name="table_name">Your table name</string>
    <string name="RBT">Remove blank time</string>
    <string name="info1">This application is developed by NGK</string>
    <string name="balance">Balance</string>
    <string name="backwithoutsaving">Back without saving</string>
    <string name="exit">Back again to exit app</string>
    <string name="remind">Remind</string>
    <string name="permission">Permission</string>
    <string name="PermissionDes">You must grant full permissions to make the app work best</string>
    <string name="grant">Grant</string>
    <string name="warnning_sound">Sound will play after 3 seconds</string>
    <string name="full">Full</string>
    <string name="RABT">Not show time</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="addnote">Add notes</string>
    <string name="delete">Delete</string>
    <string name="movetotop">Move to top</string>
    <string name="edit">Edit</string>
    <string name="notes">Notes</string>
    <string name="exname">EX name</string>
    <string name="exdes">EX describe</string>
    <string name="click_longclick">Long click on an event  to edit it</string>
    <string name="simplify">Simplify</string>
    <string name="clarify">Clairify</string>
    <string name="delete_activity">You want to delete this event ?</string>
    <string name="location">Location</string>
    <string name="from">from</string>
    <string name="dateFotmat">MM/dd/yyyy</string>
    <string name="change_vibrate">Change phone mode to vibrate</string>
    <string name="change_silent">Change phone mode to silent</string>
    <string name="starttime">Start time</string>
    <string name="endtime">End time</string>
    <string name="date">Date</string>
    <string name="weekly">Weekly</string>
    <string name="Once">Only once</string>
    <string name="day">day</string>
    <string name="checkboxdelete">Delete this event when it done</string>
    <string name="Hour">hour</string>
    <string name="Minute">minute</string>
    <string name="not_set">Not set</string>
    <string name="change_normal">Change phone mode to normal</string>
    <string name="phone_mode_only">Phone mode</string>
    <string name="showing_information">Showing information</string>
    <string name="at">at</string>
    <string name="Type">Show type</string>
    <string name="setting">Setting</string>
    <string name="import_timetable">Import time table</string>
    <string name="sign_in">Sign in your timetable website</string>
    <string name="Import">Import</string>
    <string name="data_error">Data error</string>
    <string name="TKB_TietHoc" translatable="false">07:00-07:50 07:50-08:40 08:50-09:40 09:50-10:40 10:40-11:30 13:30-14:20 14:20-15:10 15:20-16:10 16:10-17:00 00:00-00:00 18:30-19:20 19:20-20:10 20:20-21:10</string>
    <string name="URL_CTU" translatable="false">https://www.ctu.edu.vn/</string>
    <string name="URL_HTQL" translatable="false">https://htql.ctu.edu.vn/htql/login.php</string>
    <string name="URL_Sinhvien" translatable="false">https://qldt.ctu.edu.vn/htql/sinhvien/hindex.php</string>
    <string name="URL_TKB" translatable="false">https://qldt.ctu.edu.vn/htql/dkmh/student/index.php?action=lich_hoc</string>
    <string name="URL_DKHP" translatable="false">https://qldt.ctu.edu.vn/htql/dkmh/student/index.php?action=qdinh_dky</string>
    <string name="no_notes">Add notes</string>
    <string name="reset">Reset</string>
    <string name="set">Set</string>
    <string name="unset">Unset</string>
    <string name="saved">Your changes have saved</string>

</resources>
