<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:transitionName="card_alarm"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Setting_SoundNoti">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/permission" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:paddingHorizontal="10dp"
                    android:text="@string/PermissionDes" />

                <Button
                    android:id="@+id/permissionbutton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"

                    android:text="@string/grant" />
            </LinearLayout>
            <ImageView
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkGray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/alarm" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/alarm_texview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                    android:gravity="center_vertical"
                    android:paddingVertical="5dp"
                    android:text="@string/Alarm_Sound" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"

                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/Vibration" />

                <Switch
                    android:id="@+id/vibraSwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />


            </LinearLayout>

            <ImageView
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkGray"/>

            <TextView
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noti" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/notification_texview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                    android:gravity="center_vertical"
                    android:paddingVertical="5dp"
                    android:text="@string/Notification_Sound" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/Vibration" />

                <Switch
                    android:id="@+id/vibraSwitch2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>