<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Setting">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:textSize="18sp"
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:drawableLeft="@drawable/icon_table"
                android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/table"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:drawableLeft="@drawable/icon_event"
                android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/Events"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:drawableLeft="@drawable/icon_color"
                android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/event_color"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/sound_noti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:drawableLeft="@drawable/icon_sound_notification"
                android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/sound_noti"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:drawableLeft="@drawable/icon_infor"
                android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/info"
                android:textColor="@color/colorBlack" />

            <TextView
                android:textSize="18sp"
                android:id="@+id/import_timetable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:drawableLeft="@drawable/icon_import"
                android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/import_timetable"
                android:textColor="@color/colorBlack" />



        </LinearLayout>

    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>