<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/background"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/main"
        android:background="@drawable/back_phonemode_radio"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/phone_mode"
            android:textColor="@color/colorGray"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:translationZ="3dp"
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/normalRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_custom"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/phone_true_false"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/normal"
                android:textColor="@drawable/color_black_white" />

            <RadioButton

                android:id="@+id/vibrateRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_custom"
                android:button="@null"
                android:drawableTop="@drawable/vibrate_true_false"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/vibrate"
                android:textColor="@drawable/color_black_white" />

            <RadioButton
                android:id="@+id/silentRadio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/radio_button_custom"
                android:button="@null"
                android:drawableTop="@drawable/silent_true_false"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/silent"
                android:textColor="@drawable/color_black_white" />
        </RadioGroup>

    </LinearLayout>
</LinearLayout>