<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Setting_Color">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_setting_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        android:weightSum="10">

        <LinearLayout
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:padding="15dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/background_color" />

            <ImageView
                android:src="@drawable/lens_black"
                android:id="@+id/backgroundcolor"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="@drawable/white_gray_cell"/>
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:padding="15dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/text_color" />

            <ImageView
                android:padding="5dp"
                android:id="@+id/textcolor"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:background="@drawable/white_gray_cell"
                android:src="@drawable/lens_black"/>
        </LinearLayout>

        <LinearLayout
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:padding="15dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/cell_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content">
                <Switch
                    android:layout_marginHorizontal="10dp"
                    android:id="@+id/cell_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_radio_setting"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/crystal_clear"
                    android:textColor="@drawable/color_black_white"
                    android:thumb="@null" />
            </LinearLayout>


            <ImageView
                android:padding="5dp"
                android:id="@+id/cell_color"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:background="@drawable/white_gray_cell"
                android:src="@drawable/lens_black"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>